cluster/k8s/matrix/element-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: element-web
  namespace: matrix
spec:
  parentRefs:
    - name: cluster-gateway
      namespace: gateway-system
  hostnames:
    - "chat.allegedly.works"
  rules:
    - backendRefs:
        - name: element-web
          port: 80
